--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@prisma/client": "^6.7.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
+    "input": "1.0.1",
+    "telegram": "2.26.22",
     "zod": "^3.24.4"
   },
   "devDependencies": {
