--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "input": "1.0.1",
+    "qrcode-terminal": "0.12.0",
     "telegram": "2.26.22",
+    "whatsapp-web.js": "1.28.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
+    "@types/qrcode-terminal": "0.12.2",
     "@vitest/coverage-v8": "3.1.3",
     "@vitest/ui": "3.1.3",
     "eslint": "^9.26.0",
