--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "axios": "1.9.0",
+    "crypto": "1.0.1",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "input": "1.0.1",
+    "os": "0.1.2",
+    "puppeteer": "24.8.2",
     "qrcode-terminal": "0.12.0",
     "telegram": "2.26.22",
     "whatsapp-web.js": "1.28.0",
