--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "telegram:login": "tsx src/utils/telegram-login.ts",
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
@@ -26,6 +27,8 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
     "input": "1.0.1",
+    "node-cron": "4.0.5",
+    "nodemailer": "7.0.3",
     "os": "0.1.2",
     "puppeteer": "24.8.2",
     "qrcode-terminal": "0.12.0",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
+    "@types/nodemailer": "6.4.17",
     "@types/qrcode-terminal": "0.12.2",
     "@vitest/coverage-v8": "3.1.3",
     "@vitest/ui": "3.1.3",
